refactored code for efficiency and to utilize typescript features

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,13 @@
+// CSS VARIABLES
+:root {
+  // colors
+  --primary-01: blue;
+
+  // other
+  --nav-height: 4em;
+}
+
+// GLOBAL STYLES
 body {
   margin: 0;
   font-family:
