--- a/src/User/styles/profile.module.scss
+++ b/src/User/styles/profile.module.scss
@@ -1,22 +1,24 @@
-.profile-form{
+.profileForm {
   text-align: center;
 }
-.profile-labels{
+
+.profileLabel {
   color: blue;
   margin-bottom: 10px;
 }
-.profile-attributes{
+
+.profileAttribute {
   display: block;
-  margin: 20px auto 20px auto;
+  margin: 20px auto;
   width: 80%;
   border: 3px solid blue;
   padding: 5px;
 }
 
-.profile-error{
+.profileError {
   color: red;
 }
 
-.profile-button{
+.profileButton {
   color: blue;
 }
